# parallel_homework

./: CMakeLists.txt  README.md  main.cpp
